--- a/style.css
+++ b/style.css
@@ -195,3 +195,47 @@ nav span {
   padding: 36px;
   background-color: white;
 }
+
+
+
+@media screen and (max-width: 768px) {
+  body {
+    padding: 0;
+  }
+  
+  main {
+    flex-direction: column;
+    padding: 24px;
+    align-items: center;
+  }
+  
+  #folders, #tasks {
+    margin-right: 0;
+    margin-bottom: 24px;
+  }
+
+  .card {
+    padding: 10px;
+    width: 350px;
+  }
+  
+  form {
+    flex-direction: column;
+    margin-bottom: 16px;
+  }
+
+  input[type="text"], input[type="date"], select {
+    width: 100%;
+    margin: 8px 0;
+  }
+  
+  #tasks input[type="submit"] {
+    width: 100%;
+  }
+}
+
+
+
+
+
+
